edited some methods in UsersController to return Booleans, added test class for UsersController

--- a/TeaLeavesTests/TeaLeavesTests.csproj
+++ b/TeaLeavesTests/TeaLeavesTests.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\TeaLeaves\TeaLeaves.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\user.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
