Added ability to create groups Added group messages feature Sorted contacts with groups correctly based on the last message receieved Added icon for application

--- a/TeaLeaves/TeaLeaves.csproj
+++ b/TeaLeaves/TeaLeaves.csproj
@@ -33,6 +33,9 @@
     <None Update="Resources\lock.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\tealeaves-icon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\user.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
