Added support for uploading images with or without a message text

--- a/TeaLeaves/TeaLeaves.csproj
+++ b/TeaLeaves/TeaLeaves.csproj
@@ -42,6 +42,9 @@
     <None Update="Resources\lock.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\paperclip.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\tealeaves-icon.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
