Completed message forwarding Added notification chime when a new message is received

--- a/TeaLeaves/TeaLeaves.csproj
+++ b/TeaLeaves/TeaLeaves.csproj
@@ -43,6 +43,9 @@
     <None Update="Resources\lock.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\notification.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\paperclip.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
